more edits to cutting

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -460,31 +460,31 @@ Differences across forest vertical gradients in biophysical conditions, plant tr
 Tree metabolism and growth are shaped by crown location in the vertical gradient.
 Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which strongly predicts tree transpiration  [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015] photosynthesis, and intra-canopy trait variation [@binLeafTraitExpression2022].
 Specifically, increases are linked to increased leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability results in higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
-The net foliar photosynthate production is allocated among functions including respiration, above-ground woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
-Among these, the process about which we know the most is woody aboveground growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but is disproportionately important to long-term forest dynamics and carbon cycling in that it builds up woody tissues with a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
+Photosynthate production is allocated among functions including respiration, above-ground woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
+Among these, the best-studied process is aboveground woody growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but is disproportionately important to long-term forest dynamics and carbon cycling because woody tissues have a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
 Radial stem growth may increase or decrease over time as trees grow in DBH depending on the light environment [@anderson-teixeiraJointEffectsClimate2022].
 In open forests and for open-growth individual trees, growth rate declines with DBH [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraJointEffectsClimate2022], whereas growth rate consistently increases with DBH for trees established in the understory of a closed-canopy forest [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraSizerelatedScalingTree2015]. 
 This points to a dominant role of vertical profiles in the biophysical environment, particularly light (Fig. `r fig_NEON_vertical`), in shaping tree growth rates within forests. 
 
 Vertical gradients also affect the climate sensitivity of metabolism and growth.
-Stomatal conductance can be strongly limited by high atmospheric demand (low RH, high $T_{air}$ and VPD) even when soil water is plentiful [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016].
-Therefore, periods of high atmospheric demand -- be these on time scales of hours, days, or seasons -- tend to cause greater reductions in transpiration and photosynthesis in tall trees that occupy canopy positions in closed-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. 
-This is consistent with observations that both dry season leaf loss (section 3.6, Table `r table_leaf_traits`) and $g_s$ limitation (section 4.1, Table `r table_leaf_metabolism`) increases with height across the vertical profile. 
-More active regulation of transpiration by tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004] -- often combined with greater effective rooting depth -- may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and reduce the need for adjustment of traits related to carbon metabolism during drought [@bartholomewSmallTropicalForest2020]. 
-This results in decreasing carbon isotope discrimination, indicative of greater $g_s$ limitation, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
+Stomatal conductance can be strongly limited by high VPD even when soil water is plentiful [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016].
+Therefore, periods of high VPD, whether on time scales of hours, days, or seasons, tend to reduce transpiration and photosynthesis more in tall trees that occupy canopy positions in closed-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. 
+This is consistent with observations that both dry season leaf loss (section 3.6, Table `r table_leaf_traits`) and $g_s$ limitation (section 4.1, Table `r table_leaf_metabolism`) increase with height across the vertical profile. 
+More active regulation of transpiration by tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004] -- often combined with greater effective rooting depth -- may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and reduce the need to adjust carbon metabolism traits during drought [@bartholomewSmallTropicalForest2020]. 
+This reduces carbon isotope discrimination, indicative of greater $g_s$ limitation, with increasing tree height [Table `r table_leaf_traits`, @mcdowellRelationshipTreeHeight2011].
 
-In turn, the drought sensitivity of woody growth tends to be greater in canopy trees than in smaller trees with less exposed crowns. 
-In the field of dendrochronology, it is generally accepted that tree ring records of large, exposed trees are best suited for climate reconstructions because their annual growth displays the greatest sensitivity to interannual variation in climate [@frittsTreeRingsClimate1976]. 
-However, only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
-These have most commonly found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [Fig. `r fig_treerings`, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021;@anderson-teixeiraJointEffectsClimate2022; @heilmanEcologicalForecastingTree2022], corroborating evidence from globally distributed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. 
-In addition to lower drought resistance of growth, larger trees frequently exhibit greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
-Mechanistically, this is almost certainly driven in part by the fact that larger trees have their crowns in a microenvironment that is more challenging during drought [Figs. `r fig_schematic` - `r fig_leaf_T`, @scharnweberConfessionsSolitaryOaks2019], yet there is also reason to believe that height itself provides disadvantages [@olsonPlantHeightHydraulic2018; @couvreurWaterTransportTall2018].
-Indeed, despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], greater drought sensitivity of larger trees has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraJointEffectsClimate2022], although there is also evidence that short trees in young stands can be more drought-sensitive than taller trees in mature forests [@irvineAgerelatedChangesEcosystem2004].
+In turn, the drought sensitivity of woody growth tends to be greater in upper-canopy trees than in smaller trees with less exposed crowns. 
+Dendrochronologists generally agree tree ring records of large, exposed trees are best suited for climate reconstructions because their annual growth is most sensitive to interannual climate variation [@frittsTreeRingsClimate1976]. 
+However, few studies have directly examined drought- or temperature-sensitivities as a function of tree size.
+Most have found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [Fig. `r fig_treerings`, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021;@anderson-teixeiraJointEffectsClimate2022; @heilmanEcologicalForecastingTree2022], corroborating evidence from global forest censuses that drought reduces growth more in large trees [@bennettLargerTreesSuffer2015]. 
+Drought also causes greater mortality in larger trees [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
+Mechanistically, this is likely driven in part by larger trees having crown in microenvironments that are more challenging during drought [Figs. `r fig_schematic` - `r fig_leaf_T`, @scharnweberConfessionsSolitaryOaks2019], yet height itself also creates disadvantages [@olsonPlantHeightHydraulic2018; @couvreurWaterTransportTall2018].
+Indeed, despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], greater drought sensitivity of larger trees has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraJointEffectsClimate2022], although some evidence indicates that short trees in young stands can be more drought-sensitive than taller trees in mature forests [@irvineAgerelatedChangesEcosystem2004].
 The relative importance of exposure versus height in shaping drought sensitivity remains to be disentangled.
 
-Although it is clear that drought sensitivity increases with crown height though forest vertical gradients, and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies across this gradient.
+Although drought sensitivity clearly increases with crown height and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies along the vertical gradient.
 High $T_{air}$ is often associated with high VPD and atmospheric drought, likely explaining negative growth responses to $T_{air}$ -- particularly among larger trees -- even if soil moisture remains high [@novickIncreasingImportanceAtmospheric2016], or when precipitation is statistically accounted for [Fig. `r fig_treerings`, @anderson-teixeiraJointEffectsClimate2022].
-However, under well-watered conditions conducive to high $g_s$ in canopy trees, we do not necessarily expect their photosynthesis (see section 4.2) or woody growth to exhibit higher sensitivity to $T_{air}$ than their understory counterparts. 
+However, under well-watered conditions conducive to high $g_s$, we do not necessarily expect higher thermal sensitivity of photosynthesis (see section 4.2) or woody growth in upper-canopy trees than their understory counterparts. 
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
 Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
 
@@ -494,10 +494,10 @@ Additional research is required to understand the mechanisms underlying these in
 ### 5.2. C and water flux
 
 Canopy trees account for the majority of forest ecosystem water and carbon cycling.
-While studies partitioning transpiration across forest vertical gradients are rare, both evapo-transpiration (ET) and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. 
-Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration [Fig `r fig_ecosystem`a, @kunertRevisedHydrologicalModel2017], and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. 
+While studies partitioning transpiration across forest vertical gradients are rare, both evapo-transpiration (ET) and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, where the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. 
+Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed ~93% of ET, or 88% of transpiration [Fig `r fig_ecosystem`a, @kunertRevisedHydrologicalModel2017], and trees >33 cm DBH contributed >80% of transpiration in a forest in Costa Rica [@mooreUpscalingTranspirationDiverse2018]. 
 In terms of C cycling, it has been estimated that the canopy strata contributes $\ge$ 64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil, @missonPartitioningForestCarbon2007]. 
-Large trees also dominate in terms of woody above ground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of $ANPP_{woody}$ and $M_{woody}$ across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiotDistributionBiomassDynamicsinpress]. 
+Large trees also dominate woody above ground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of $ANPP_{woody}$ and $M_{woody}$ across 25 globally distributed forests [Fig. `r fig_ecosystem`b, @piponiotDistributionBiomassDynamicsinpress]. 
 
 ![**Figure `r fig_ecosystem`. Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests.** Panel (a) is from @kunertRevisedHydrologicalModel2017; panel (b) presents averages for 14 tropical forests from @piponiotDistributionBiomassDynamicsinpress.](schematics/ecosystem vertical partitioning/ecosystem partitioning.png)
 
@@ -505,14 +505,14 @@ It is less clear how thermal sensitivity of water and carbon fluxes vary across 
 We expect that transpiration, GPP, and $ANPP_{woody}$ should all be more sensitive to high temperatures in the upper canopy than in the understory -- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020; @nunesForestFragmentationImpacts2022]. 
 Because canopy trees dominate these fluxes (Fig. `r fig_ecosystem`), their responses will strongly influence the whole-ecosystem response, potentially with modest buffering by the understory. 
 Thus, for example, increases in canopy temperature reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. 
-Yet there is also evidence that GPP and ecosystem respiration are less sensitive to heat and drought stress in older forests than in young forests [@xuSeasonalVariabilityForest2020], perhaps in part because of more complex vertical structuring [@jonesManagingRedPine2019;@nunesForestFragmentationImpacts2022].
-A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an *El Niño* drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. 
-It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. `r fig_leaf_T`) and tree ring evidence (Fig. `r fig_treerings`) suggests that understory trees may respond more negatively to hot, wet conditions. 
+Yet evidence also suggests GPP and ecosystem respiration are less sensitive to heat and drought stress in older forests than in young forests [@xuSeasonalVariabilityForest2020], perhaps in part because of more complex vertical structuring [@jonesManagingRedPine2019;@nunesForestFragmentationImpacts2022].
+A rare example of a study comparing climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an *El Niño* drought in Panama, while the smallest trees had higher productivity during the drought, likely because of increased light in the understory. 
+It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. `r fig_leaf_T`) and tree ring evidence (Fig. `r fig_treerings`) suggest that understory trees may respond more negatively to hot, wet conditions. 
 Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
 
 # III.  Implications
 
-Having established how physical conditions and biological form and function vary across vertical gradients (Fig. `r fig_schematic`), we now turn attention to the implications of these patterns for our understanding of how forest ecosystems may be impacted by global change, and our ability to project this across space and time.
+Having established how physical conditions and biological form and function vary across vertical gradients (Fig. `r fig_schematic`), we now turn to the implications of these patterns for understanding how forest ecosystems may be impacted by global change, and our ability to project this across space and time.
 
 
 ## Global change responses
