warming section edits

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -554,24 +554,24 @@ Death of canopy trees will open canopy gaps, as discussed in the following secti
 ### Canopy disturbance
 
 Rising temperatures and severe droughts place canopy trees at particularly elevated risk of mortality. 
-Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change [@ipccClimateChange20212021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. 
-Increase in the severity and frequency of heat waves, accompanied with an increase in VPD and ET, can exacerbate effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
+Large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change [@ipccClimateChange20212021], and they are also targeted by selective logging [e.g., @millerReducedImpactLogging2011]. 
+Increasing severity and frequency of heat waves, accompanied with increases in VPD and ET, can exacerbate effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
 Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
-Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the forest [@juckerCanopyStructureTopography2018; @starkReframingTropicalSavannization2020]. 
-Such changes often result in increased growth of smaller trees, which benefit from increased light [@hoganDroughtInterannualVariability2019;@bennettLargerTreesSuffer2015; @nunesForestFragmentationImpacts2022], and wetter forests can prove quite resilient to canopy disturbance [@millerReducedImpactLogging2011].
+Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases radiation and temperatures within the forest [@juckerCanopyStructureTopography2018; @starkReframingTropicalSavannization2020]. 
+Such changes often enhance growth of smaller trees, which benefit from increased light [@hoganDroughtInterannualVariability2019;@bennettLargerTreesSuffer2015; @nunesForestFragmentationImpacts2022], and wetter forests can prove quite resilient to canopy disturbance [@millerReducedImpactLogging2011].
 However, this shift to hotter and drier microclimates makes some forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
-Severe degradation impacts can cause dramatic ecological state changes (e.g., the transition from forest to more open, savanna-like vegetation in tropical forest regions through 'savannization') and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
-Such dynamics are likely to be amplified by warming temperatures, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but may have reduced probability of recovering and persisting when affected by severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @mcdowellPervasiveShiftsForest2020; @floresFloodplainsAchillesHeel2017].
+Severe degradation can cause dramatic ecological state changes (e.g., the transition of tropical forests more open, savanna-like vegetation) and non-linear threshold responses in energy balance and associated microclimates, with implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020].
+Such dynamics will likely to be amplified by warming, such that climate change is pushing some of the world's forests into alternative stable states wherein forest can persist as long as the canopy remains largely intact, but may not recover and persist after severe canopy disturbance [@tepleyVulnerabilityForestLoss2017; @millerAlternativeStableEquilibria2019; @mcdowellPervasiveShiftsForest2020; @floresFloodplainsAchillesHeel2017].
 
 Canopy disturbance poses an increasing threat to the biodiversity of understory species that are otherwise buffered from climatic extremes [@scheffersMicrohabitatsReduceAnimal2013a; @greiserHidingClimateCharacterizing2019]. 
 Canopy structure affects understory species composition, which has been shown to shift under warming and canopy disturbance [@majasalmiImpactTreeCanopy2020; @bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020].
-In the understory, warming is disproportionately affecting the less thermally-adapted plant species, resulting in associated plant community thermophilization [@zellwegerForestMicroclimateDynamics2020b; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019].
-If such compositional shifts towards more thermally-adapted species fail to keep up with the pace of warming, the ecosystem-level resilience to canopy disturbance that is often provided by smaller trees [e.g.,  @millerReducedImpactLogging2011] will be destroyed, resulting in breakdown of canopy structure and the potential state changes described above.
+In the understory, warming disproportionately affects less thermally-adapted plant species, causing thermophilization of the plant community [@zellwegerForestMicroclimateDynamics2020b; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019].
+If compositional shifts towards more thermally-adapted species fail to keep pace with warming, the ecosystem-level resilience to canopy disturbance that is often provided by smaller trees [e.g.,  @millerReducedImpactLogging2011] will be destroyed, resulting in breakdown of canopy structure and the potential state changes described above.
 
 ## Scaling across space and time 
 
 As we have reviewed here, vertical profiles in forests strongly shape forest dynamics and climate change responses.
-Ultimately, to achieve the important goal of understanding feedbacks between the world's forests and climate change, it is essential that these mechanisms be sufficiently represented in models and scaled spatially via remote sensing. 
+Ultimately, to achieve the important goal of understanding feedbacks between the world's forests and climate change, these mechanisms must be sufficiently represented in models and scaled spatially via remote sensing. 
 
 ### Representing Vertical Gradients in Models
 
